--- a/crowd-agario/package.json
+++ b/crowd-agario/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-json-view": "^1.19.1",
+    "react-scripts": "3.0.1",
+    "recharts": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
